--- a/Test02/Views/PhongKho/QuanLyDL.cshtml
+++ b/Test02/Views/PhongKho/QuanLyDL.cshtml
@@ -281,11 +281,11 @@
                 });
         });
     });
-    oTable = $('#sampleTable').dataTable();
-    $('#all').click(function (e) {
-        $('#sampleTable tbody :checkbox').prop('checked', $(this).is(':checked'));
-        e.stopImmediatePropagation();
-    });
+    //oTable = $('#sampleTable').dataTable();
+    //$('#all').click(function (e) {
+    //    $('#sampleTable tbody :checkbox').prop('checked', $(this).is(':checked'));
+    //    e.stopImmediatePropagation();
+    //});
 
     //EXCEL
     // $(document).ready(function () {
