--- a/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
+++ b/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
@@ -40,8 +40,7 @@
     <div class="app-sidebar__overlay" data-toggle="sidebar"></div>
     <aside class="app-sidebar">
         <div class="app-sidebar__user">
-            <img class="app-sidebar__user-avatar" src="~/Content/Img/DiemKhang.jpg" width="50px"
-                 alt="User Image">
+            <img class="app-sidebar__user-avatar" src="~/Content/Img/DiemKhang.jpg" width="50px" alt="User Image">
             <div>
                 <p class="app-sidebar__user-name">
                     <b>
@@ -79,13 +78,13 @@
                     <i class='app-menu__icon bx bx-user-voice'></i><span class="app-menu__label">Quản lý hàng hóa</span>
                 </a>
             </li>
-            @*<li>
-                    <a class="app-menu__item @ViewBag.tk" href="~/PhongKho/TonKho">
-                        <i class='app-menu__icon bx bx-run'></i><span class="app-menu__label">
-                            Tồn kho
+            <li>
+                    <a class="app-menu__item @ViewBag.dhxdd" href="~/PhongKho/DSDonHang">
+                        <i class='app-menu__icon bx bxs-package'></i><span class="app-menu__label">
+                            Đơn hàng xuất
                         </span>
                     </a>
-                </li>*@
+            </li>
             <li>
                 <a class="app-menu__item @ViewBag.nk" href="~/PhongKho/NhapKho">
                     <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Phiếu nhập & xuất</span>
