--- a/Test02/Views/PhongKho/Themkho.cshtml
+++ b/Test02/Views/PhongKho/Themkho.cshtml
@@ -28,47 +28,49 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="tile">
-                <div class="tile-body">
-                    <h3 class="tile-title" style="text-align:center">THÊM MỚI KHO HÀNG</h3>
-                    @*<h6>    Mã kho sẽ tự động sinh ra sau khi lưu</h6>*@
-                    <div class="form-horizontal">
-                        <hr />
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        @Html.HiddenFor(model => model.MaKho)
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.TenKho, "Tên kho", htmlAttributes: new { @class = "control-label col-md-12" })
-                            <div class="col-md-12">
-                                @Html.EditorFor(model => model.TenKho, new { htmlAttributes = new { @class = "form-control " } })
-                                @Html.ValidationMessageFor(model => model.TenKho, "", new { @class = "text-danger" })
-                            </div>
+<div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6">
+        <div class="tile">
+            <div class="tile-body">
+                <h3 class="tile-title" style="text-align:center">THÊM MỚI KHO HÀNG</h3>
+                @*<h6>    Mã kho sẽ tự động sinh ra sau khi lưu</h6>*@
+                <div class="form-horizontal">
+                    <hr />
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.HiddenFor(model => model.MaKho)
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.TenKho, "Tên kho", htmlAttributes: new { @class = "control-label col-md-12" })
+                        <div class="col-md-12">
+                            @Html.EditorFor(model => model.TenKho, new { htmlAttributes = new { @class = "form-control " } })
+                            @Html.ValidationMessageFor(model => model.TenKho, "", new { @class = "text-danger" })
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.DiaChi, "Địa chỉ", htmlAttributes: new { @class = "control-label col-md-12" })
-                            <div class="col-md-12">
-                                @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
-                            </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.DiaChi, "Địa chỉ", htmlAttributes: new { @class = "control-label col-md-12" })
+                        <div class="col-md-12">
+                            @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
                         </div>
+                    </div>
 
-                        <div class="row justify-content-center">
-                            <div class="col-sm-2">
-                                <input type="submit" value="Lưu dữ liệu" class="btn btn-outline-dark" title="Lưu" />
-                            </div>
-                            <div class="col-sm-2">
-                                <a class="btn btn-outline-primary btn-group-sm" href="~/PhongKho/QuanLyKho" title="Trở về">
-                                    Trở về
-                                </a>
-                            </div>
+                    <div class="row justify-content-center">
+                        <div class="col-sm-2">
+                            <input type="submit" value="Lưu dữ liệu" class="btn btn-outline-dark" title="Lưu" />
+                        </div>
+                        <div class="col-sm-2">
+                            <a class="btn btn-outline-primary btn-group-sm" href="~/PhongKho/QuanLyKho" title="Trở về">
+                                Trở về
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="col-sm-3"></div>
+</div>
 
 }
 <div class="row">
