--- a/Test02/Views/PhongKho/XuatKho.cshtml
+++ b/Test02/Views/PhongKho/XuatKho.cshtml
@@ -116,9 +116,9 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>*@
 <!-- The javascript plugin to display page loading on top-->
-<script src="~/Scripts/pace.min.js"></script>
+<!--<script src="~/Scripts/pace.min.js"></script>-->
 <!-- Page specific javascripts-->
-<script type="text/javascript" src="~/Scripts/chart.js"></script>
+<!--<script type="text/javascript" src="~/Scripts/chart.js"></script>
 <script type="text/javascript">
     var data = {
       labels: ["Tháng 1", "Tháng 2", "Tháng 3", "Tháng 4", "Tháng 5", "Tháng 6", "Tháng 7", "Tháng 8", "Tháng 9", "Tháng 10", "Tháng 11", "Tháng 12"],
@@ -151,9 +151,9 @@
 
         var ctxb = $("#barChartDemo").get(0).getContext("2d");
         var barChart = new Chart(ctxb).Bar(data);
-</script>
+</script>-->
 <!-- Google analytics script-->
-<script type="text/javascript">
+<!--<script type="text/javascript">
         if (document.location.hostname == 'pratikborsadiya.in') {
             (function (i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
@@ -169,4 +169,4 @@
             ga('create', 'UA-72504830-1', 'auto');
             ga('send', 'pageview');
         }
-</script>
+</script>-->
