--- a/Test02/Views/GiaoHang/DonGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/DonGiaoHang.cshtml
@@ -1,23 +1,51 @@
 ﻿@model IEnumerable<Test02.Models.DonHang>
 @using Test02.Models;
 @{
-    ViewBag.Title = "DonHangMoi";
+    ViewBag.Title = "DonGiaoHang";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
-    ViewBag.gh_donhangmoi = "active";
-    ViewBag.nd = "Danh sách đơn hàng mới cần giao";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();  
+    ViewBag.gh_dongiaohang = "active";
+    ViewBag.nd = "Danh sách đơn giao hàng";
+    QuanLyDLEntities2 db = new QuanLyDLEntities2();
 }
+
+
+<div class="row">
+    <div class="col-md-6 col-lg-4">
+        <div class="widget-small info coloured-icon">
+            <img src="~/Content/Img/logictic/fast-delivery.png" style="width:25%; margin-left:10px" />
+            <div class="info">
+                <a href="/GiaoHang/DonDangGiao" style="text-align:center; color:#060054;font-weight:1000; margin-left:35px">ĐƠN ĐANG GIAO</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 col-lg-4">
+        <div class="widget-small warning coloured-icon">
+            <img src="~/Content/Img/logictic/shipped.png" style="width:25%; margin-left:10px" />
+            <div class="info">
+                <a href="/GiaoHang/DonDaGiao" style="text-align: center; color: #060054; font-weight: 1000; margin-left: 45px">ĐƠN ĐÃ GIAO</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 col-lg-4">
+        <div class="widget-small danger coloured-icon">
+            <img src="~/Content/Img/logictic/fail.png" style="width:25%; margin-left:10px" />
+            <div class="info">
+                <a href="/GiaoHang/DonHangHoan" style="text-align: center; color: #060054; font-weight: 1000; margin-left: 55px">ĐƠN HOÀN</a>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <div class="row">
     <div class="col-md-12">
         <div class="tile">
             <div class="tile-body">
+
                 <div class="row element-button">
-                   
                     <div class="col-sm-2">
                         <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="#"><i class="fas fa-refresh"></i> Làm mới danh sách</a>
-                    </div>      
+                    </div>
                     <div class="col-sm-2">
                         <a class="btn btn-delete btn-sm print-file" title="In" onclick="myApp.printTable()">
                             <i class="fas fa-print"></i> In dữ liệu
@@ -26,35 +54,28 @@
                 </div>
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                     <div class="row">
-                        <h2 style="margin-left:29%">DANH SÁCH ĐƠN HÀNG MỚI CẦN GIAO</h2>
+                        <h2 style="margin-left:35%">DANH SÁCH ĐƠN GIAO HÀNG</h2>
                         <div class="col-sm-12">
                             <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
-
                                 <thead>
                                     <tr role="row">
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 50px; text-align:center">Mã đơn hàng</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 70px; text-align: center ">Ngày lập </th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px; text-align: center ">Tên đại lý</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 30px; text-align: center ">Mã Đơn hàng </th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 70px; text-align: center ">Mã đại lý</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 50px; text-align: center ">Số điện thoại đại lý</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 120px; text-align: center ">Địa điểm giao hàng</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px; text-align: center ">Địa chỉ giao</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px; text-align: center ">Tình trạng thanh toán</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 25px; text-align: center ">Thành tiền</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 25px; text-align: center ">Xếp đơn</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 60px; text-align: center ">Tình trạng giao</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 25px; text-align: center ">Cập nhật</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @foreach (var item in Model)
                                     {
-
-                                        if (item.XuatHoaDon == true && item.PhieuXuatKho == true && item.TrangThai == "Đã xét duyệt" && item.TinhTrangGH == null )
+                                        if (item.PhieuXuatKho == true && item.XuatHoaDon == true && item.TinhTrangGH != null && item.TrangThai == "Đã xét duyệt")
                                         {
                                             <tr>
-
                                                 <td>
                                                     @Html.DisplayFor(modelItem => item.MaDH)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.NgayLap)
                                                 </td>
 
                                                 <td>
@@ -70,18 +91,16 @@
                                                     @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
                                                 </td>
                                                 <td>
-                                                    @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.TongTien);}
-                                                    @Html.DisplayFor(modelItem => ThanhTien)
+                                                    @Html.DisplayFor(modelItem => item.TinhTrangGH)
                                                 </td>
-
                                                 <td style="text-align:center">
-                                                    <a href="/GiaoHang/ChiTietDonGiaoHang/@item.MaDH" class="btn btn-primary btn-sm edit">
-                                                        <i class='bx bxs-cube-alt'></i>
+                                                    <a href="/GiaoHang/CapNhatTrangThaiDonHang/@item.MaDH" class="btn btn-primary btn-sm edit">
+                                                        <i class='bx bxs-check-square'></i>
                                                     </a>
-
                                                 </td>
                                             </tr>
                                         }
+
                                     }
                                 </tbody>
                             </table>
