--- a/Test02/Views/GiaoHang/Layout/LayoutGH.cshtml
+++ b/Test02/Views/GiaoHang/Layout/LayoutGH.cshtml
@@ -15,18 +15,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
 
 
 </head>
 <body onload="time()" class="app sidebar-mini rtl">
     <!-- Navbar-->
     <header class="app-header">
-        <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar"
+        <!-- Sidebar toggle button-->
+        <a class="app-sidebar__toggle" href="#" data-toggle="sidebar"
                                         aria-label="Hide Sidebar"></a>
         <!-- Navbar Right Menu-->
         <ul class="app-nav">
-
-
             <!-- User Menu-->
             <li>
                 <a class="app-nav__item" href="@Url.Action("Logout", "LoginUser")"><i class='bx bx-log-out bx-rotate-180'></i> </a>
@@ -59,37 +59,31 @@
                     <span class="">PHÒNG GIAO HÀNG</span>
                 </a>
             </li>
-            @*<li>
-                <a class="app-menu__item @ViewBag.home" href="~/KinhDoanh/TrangChu">
-                    <i class='app-menu__icon bx bx-tachometer'></i>
-                    <span class="app-menu__label">Trang chủ</span>
-                </a>
-            </li>*@
             <li>
                 <a class="app-menu__item  @ViewBag.gh_donhangmoi" href="~/GiaoHang/DonHangMoi">
                     <i class='app-menu__icon bx bxs-package'></i> <span class="app-menu__label">Đơn hàng mới</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.gh_dsgh" href="~/GiaoHang/DanhSachGiaoHang">
-                    <i class='app-menu__icon bx bxs-car'></i><span class="app-menu__label">Danh sách giao hàng</span>
+                <a class="app-menu__item @ViewBag.gh_dongiaohang" href="~/GiaoHang/DonGiaoHang">
+                    <i class='app-menu__icon bx bxs-receipt'></i><span class="app-menu__label">Đơn giao hàng</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.gh_dsdh" href="~/GiaoHang/DanhSachDonHoan">
-                    <i class='app-menu__icon bx bxs-message-square-x'></i> <span class="app-menu__label">Danh sách đơn hoàn</span>
+                <a class="app-menu__item @ViewBag.gh_shippers" href="~/GiaoHang/DanhSachShipper">
+                    <i class='app-menu__icon bx bxs-user-account'></i><span class="app-menu__label">Nhân viên giao</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.gh_nvgh" href="~/GiaoHang/DanhSachShipper">
-                    <i class='app-menu__icon bx bxs-user-account'></i><span class="app-menu__label">Nhân viên giao hàng</span>
+                <a class="app-menu__item @ViewBag.gh_phuongtienGH" href="~/GiaoHang/DanhSachPhuongTienGiaoHang">
+                    <i class='app-menu__icon bx bxs-car'></i><span class="app-menu__label">Phương tiện</span>
                 </a>
             </li>
-            <li>
+            @*<li>
                 <a class="app-menu__item  @ViewBag.gh_bc" href="~/GiaoHang/BaoCaoPhongGiaoHang">
                     <i class='app-menu__icon bx bx-pie-chart-alt-2'></i><span class="app-menu__label">Báo cáo</span>
                 </a>
-            </li>
+            </li>*@
 
         </ul>
     </aside>
